# udp-daytime-clock

./: .editorconfig  .gitignore  readme.md  setup.sh
client/: CMakeLists.txt  client
client/src/: main.cc
scripts/: build.sh  init.sh  reset.sh
server/: CMakeLists.txt  server
server/src/: async.cc  main.cc
